[package]
name = "glyph-forge"
version = "0.1.0"
edition = "2021"
description = "A handy tool library to generate glyph on build-time"
license = "MIT"


[workspace]
members = ["examples/*"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
rusttype = "0.9"
